[tool.poetry]
name = "sandbox-mongo-db"
version = "0.1.0"
description = "Just playing around!"
authors = ["nick-roberson <nicholas.roberson.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
googlemaps = "^4.10.0"
pymongo = "^4.6.1"
pydantic = "^2.6.0"
rich = "^13.7.0"
tabulate = "^0.9.0"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
